<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.wgbn.pm_20160328_trabalho_prova.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:id="@+id/imgLogo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:id="@+id/barraMenu1">

                <Button
                    android:text="@string/btnCadastrar"
                    android:id="@+id/btnCadastrar"
                    android:drawableTop="@drawable/ic_action_add"
                    style="@style/menuBtns"
                    android:onClick="cadastrarClick"/>

                <Button
                    android:text="@string/btnBuscar"
                    android:id="@+id/btnBuscar"
                    android:drawableTop="@drawable/ic_action_busca"
                    style="@style/menuBtns"
                    android:onClick="buscarClick"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/barraMenu1"
                android:id="@+id/barraMenu2">

                <Button
                    android:text="@string/btnListar"
                    android:id="@+id/btnListar"
                    android:drawableTop="@drawable/ic_action_list"
                    style="@style/menuBtns"
                    android:onClick="listarClick"/>

                <Button
                    android:text="@string/btnSair"
                    android:id="@+id/btnSair"
                    android:drawableTop="@drawable/ic_action_sair"
                    style="@style/menuBtns"
                    android:onClick="sairClick"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
